modified:   css/main.css 	modified:   css/main.css.map 	modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   images/icons.svg 	modified:   index.html 	new file:   js/menu.js 	modified:   portfolio.html 	modified:   sass/components/_card-set.scss 	modified:   sass/components/_footer.scss 	modified:   sass/components/_image-set.scss 	modified:   sass/components/_subscribe.scss 	modified:   sass/components/header/_contacts.scss 	modified:   sass/components/header/_container.scss 	modified:   sass/components/header/_header.scss 	modified:   sass/components/header/_logo.scss 	modified:   sass/components/header/_navigation.scss 	modified:   sass/utils/_common.scss

--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -1,8 +1,8 @@
 .card-set{
 	@extend %list;
-	@include flex();
+	// @include flex();
 	margin: -15px;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
 	--light-font: #afb1b8;
 }
 .card-set__item{
@@ -16,7 +16,7 @@
     }
 }
 .card-set__item--fixed-width{
-    width: calc(100% / 4 - 30px);
+    // width: calc(100% / 4 - 30px);
 }
 .card-set__icon{
 	background-color: $lightness-back;
