--- a/sass/components/header/_contacts.scss
+++ b/sass/components/header/_contacts.scss
@@ -1,10 +1,10 @@
 .contacts{
 	@extend %list;
-	@include flex(center);
+	// @include flex(center);
 	margin: 0 -25px;
 }
 .contacts__link{
-	@include flex(center);
+	// @include flex(center);
 	@extend %link;
 	color: $contact-color;
 	transition: color 250ms $time-func;
