--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -4,6 +4,15 @@
 	letter-spacing: calc(14px * 0.02);
 	border-bottom: 1px solid #ececec;
 	--contact-color:$contact-color;
+	@media (max-width:480px) {
+		height:60px;
+		&__container{
+			height: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+		}
+	}
 }
 @import "container";
 @import "contacts";
