--- a/css/main.css
+++ b/css/main.css
@@ -171,7 +171,7 @@ h1, h2, h3 {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -228,26 +228,36 @@ svg {
   border-bottom: 1px solid #ececec;
   --contact-color:$contact-color;
 }
+@media (max-width: 480px) {
+  .header {
+    height: 60px;
+  }
+  .header__container {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
 
-.header__container, .footer__container {
+.header__container {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .container {
-  width: 1200px;
+  min-width: 320px;
+  max-width: 480px;
   margin: 0 auto;
   padding: 0 15px;
 }
 
 .contacts {
-  display: flex;
-  align-items: center;
   margin: 0 -25px;
 }
 
 .contacts__link {
-  display: flex;
-  align-items: center;
   color: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -270,11 +280,18 @@ svg {
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.174;
+  font-size: 24px;
+  line-height: 1.1666666667;
   color: #2196F3;
   letter-spacing: 0.78px;
-  padding: 24px 0;
+  display: inline-block;
+}
+@media (max-width: 480px) {
+  .logo {
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
 }
 
 .logo__subtext {
@@ -291,19 +308,17 @@ svg {
   align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 32px 0;
+  font-size: 40px;
 }
 .navigation__link:hover, .navigation__link:active, .navigation__link:focus {
   color: #2196F3;
 }
 
 .navigation {
-  margin-right: auto;
-  margin-left: 93px;
+  margin: 0 auto;
 }
 
 .navigation__list {
-  display: flex;
-  align-items: center;
   margin: 0 -25px;
 }
 
@@ -315,16 +330,50 @@ svg {
 .current {
   color: #2196F3;
 }
-.current::after {
-  content: "";
-  position: absolute;
-  bottom: -1px;
+@media (min-width: 481px) {
+  .current::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    display: block;
+    background-color: #2196F3;
+  }
+}
+
+.menu {
+  position: fixed;
+  top: 0;
   left: 0;
   width: 100%;
-  height: 4px;
-  border-radius: 2px;
+  height: 100%;
+  z-index: 2;
+  background-color: #ffffff;
+}
+
+.menu-toggle {
+  z-index: 3;
+  cursor: pointer;
+  border: none;
+  background-color: inherit;
+  color: #212121;
+}
+.menu-toggle.is-open {
+  position: fixed;
+  top: 10px;
+  right: 15px;
+}
+.menu-toggle .icon-cross {
+  display: none;
+}
+.menu-toggle.is-open .icon-menu {
+  display: none;
+}
+.menu-toggle.is-open .icon-cross {
   display: block;
-  background-color: #2196F3;
 }
 
 .footer {
@@ -336,6 +385,7 @@ svg {
 
 .footer__collumn {
   margin-right: 70px;
+  text-align: center;
 }
 
 .footer__logo {
@@ -398,6 +448,7 @@ svg {
 .subscribe {
   margin-top: 14px;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -454,9 +505,7 @@ svg {
 }
 
 .card-set {
-  display: flex;
   margin: -15px;
-  flex-wrap: wrap;
   --light-font: #afb1b8;
 }
 
@@ -467,10 +516,6 @@ svg {
 .card-set__item--shadow:hover, .card-set__item--shadow:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   outline: none;
-}
-
-.card-set__item--fixed-width {
-  width: calc(25% - 30px);
 }
 
 .card-set__icon {
@@ -748,12 +793,14 @@ svg {
 
 .image-set {
   display: flex;
+  flex-wrap: wrap;
   margin: 0 -15px;
 }
 
 .image-set__item {
   margin: 15px;
   position: relative;
+  flex-basis: calc(50% - 30px);
 }
 
 .image-set__title {
@@ -779,7 +826,6 @@ svg {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
   height: 92px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
