--- a/sass/components/header/_container.scss
+++ b/sass/components/header/_container.scss
@@ -1,8 +1,9 @@
-.header__container, .footer__container{
-	@include flex();
+.header__container/*, .footer__container*/{
+	@include flex(center, space-between);
 }
 .container{
-	width: 1200px;
+	min-width: 320px;
+	max-width: 480px;
 	margin: 0 auto;
 	padding: 0 15px;
 }
