--- a/sass/components/header/_logo.scss
+++ b/sass/components/header/_logo.scss
@@ -2,11 +2,16 @@
 	@extend %link;
 	font-family: $logo-font;
 	font-weight: 700;
-	font-size: 26px;
-	line-height: 1.174;
+	font-size: 24px;
+	line-height: calc(28/24);
 	color: $accent-color;
 	letter-spacing: calc(26px * 0.03);
-	padding: 24px 0;
+	display: inline-block;
+	// padding: 24px 0;
+	@media (max-width:480px) {
+		height: 100%;
+		@include flex(center);
+	}
 }
 
 .logo__subtext {
