--- a/sass/components/header/_navigation.scss
+++ b/sass/components/header/_navigation.scss
@@ -4,7 +4,7 @@
 	@include flex(center);
 	transition: color 250ms $time-func;
 	padding: 32px 0;
-
+	font-size: 40px;
 	&:hover,
 	&:active,
 	&:focus {
@@ -13,12 +13,11 @@
 }
 
 .navigation {
-	margin-right: auto;
-	margin-left: 93px;
+	margin: 0 auto;
 }
 
 .navigation__list {
-	@include flex(center);
+	// @include flex(center);
 	@extend %list;
 	margin: 0 -25px;
 }
@@ -30,16 +29,48 @@
 
 .current {
 	color: $accent-color;
-
-	&::after {
-		content: '';
-		position: absolute;
-		bottom: -1px;
-		left: 0;
-		width: 100%;
-		height: 4px;
-		border-radius: 2px;
+	@media (min-width:481px) {
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: -1px;
+			left: 0;
+			width: 100%;
+			height: 4px;
+			border-radius: 2px;
+			display: block;
+			background-color: $accent-color;
+		}
+	}
+	
+}
+.menu{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+	background-color: $light-font;
+}
+.menu-toggle{
+	z-index: 3;
+	cursor: pointer;
+	border: none;
+	background-color: inherit;
+	color: $font-color;
+	&.is-open{
+		position: fixed;
+		top: 10px;
+		right: 15px;
+	}
+	& .icon-cross{
+		display: none;
+	}
+	&.is-open .icon-menu {
+		display: none;
+	}
+	&.is-open .icon-cross {
 		display: block;
-		background-color: $accent-color;
 	}
 }
