modified:   sass/components/_card-set.scss

--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -15,9 +15,9 @@
         outline: none;
     }
 }
-.card-set__item--fixed-width{
+// .card-set__item--fixed-width{
     // width: calc(100% / 4 - 30px);
-}
+// }
 .card-set__icon{
 	background-color: $lightness-back;
 	border-radius: 4px;
