modified:   css/main.css 	modified:   css/main.css.map 	modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   index.html 	modified:   js/menu.js 	modified:   portfolio.html 	modified:   sass/components/_card-set.scss 	modified:   sass/components/_footer.scss 	modified:   sass/components/_image-set.scss 	modified:   sass/components/header/_contacts.scss 	modified:   sass/components/header/_container.scss 	modified:   sass/components/header/_logo.scss 	modified:   sass/components/header/_navigation.scss 	modified:   sass/utils/_common.scss

--- a/sass/components/_image-set.scss
+++ b/sass/components/_image-set.scss
@@ -8,7 +8,15 @@
 .image-set__item {
 	margin: 15px;
 	position: relative;
-	flex-basis: calc(50% - 30px);
+	@media (max-width:767px) {
+			@include col-width(2);
+	}
+	@media (min-width:768px) {
+		@include col-width(3);
+	}
+	@media (min-width:1200px) {
+		@include col-width(6);
+	}
 }
 
 .image-set__title {
@@ -33,7 +41,9 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	// width: 170px;
+	@media (min-width:1200px){
+		width: 170px;
+	}
 	height: 92px;
 	transition: border 250ms $time-func, color 250ms $time-func;
 
