--- a/css/main.css
+++ b/css/main.css
@@ -246,15 +246,42 @@ svg {
   justify-content: space-between;
 }
 
+@media (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+    align-items: center;
+  }
+}
+
 .container {
-  min-width: 320px;
-  max-width: 480px;
   margin: 0 auto;
   padding: 0 15px;
+}
+@media (max-width: 767px) {
+  .container {
+    min-width: 320px;
+    max-width: 480px;
+  }
+}
+@media (max-width: 1199px) {
+  .container {
+    width: 768px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .contacts {
   margin: 0 -25px;
+}
+@media (min-width: 1200px) {
+  .contacts {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .contacts__link {
@@ -263,6 +290,12 @@ svg {
 }
 .contacts__link:hover, .contacts__link:active, .contacts__link:focus {
   color: #2196F3;
+}
+@media (min-width: 1200px) {
+  .contacts__link {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .contacts__icon {
@@ -293,6 +326,11 @@ svg {
     align-items: center;
   }
 }
+@media (min-width: 1200px) {
+  .logo {
+    padding: 24px 0;
+  }
+}
 
 .logo__subtext {
   color: #000000;
@@ -308,18 +346,38 @@ svg {
   align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 32px 0;
-  font-size: 40px;
 }
 .navigation__link:hover, .navigation__link:active, .navigation__link:focus {
   color: #2196F3;
+}
+@media (max-width: 767px) {
+  .navigation__link {
+    font-size: 40px;
+  }
 }
 
 .navigation {
   margin: 0 auto;
 }
+@media (min-width: 768px) {
+  .navigation {
+    margin-left: 88px;
+  }
+}
+@media (min-width: 1200px) {
+  .navigation {
+    margin-left: 93px;
+  }
+}
 
 .navigation__list {
   margin: 0 -25px;
+}
+@media (min-width: 768px) {
+  .navigation__list {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .navigation__item {
@@ -330,7 +388,7 @@ svg {
 .current {
   color: #2196F3;
 }
-@media (min-width: 481px) {
+@media (min-width: 768px) {
   .current::after {
     content: "";
     position: absolute;
@@ -345,13 +403,28 @@ svg {
 }
 
 .menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
   background-color: #ffffff;
+}
+@media (max-width: 767px) {
+  .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+  }
+  .menu.is-closed {
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  .menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
 }
 
 .menu-toggle {
@@ -375,6 +448,11 @@ svg {
 .menu-toggle.is-open .icon-cross {
   display: block;
 }
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
 
 .footer {
   background-color: #2F303A;
@@ -385,7 +463,11 @@ svg {
 
 .footer__collumn {
   margin-right: 70px;
-  text-align: center;
+}
+@media (max-width: 767px) {
+  .footer__collumn {
+    text-align: center;
+  }
 }
 
 .footer__logo {
@@ -508,14 +590,41 @@ svg {
   margin: -15px;
   --light-font: #afb1b8;
 }
+@media (min-width: 768px) {
+  .card-set {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
 
 .card-set__item {
   margin: 15px;
+}
+@media (min-width: 768px) {
+  .card-set__item {
+    width: calc((100% - 2*30px)/2);
+  }
+}
+@media (min-width: 1200px) {
+  .card-set__item {
+    width: calc((100% - 4*30px)/4);
+  }
 }
 
 .card-set__item--shadow:hover, .card-set__item--shadow:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   outline: none;
+}
+
+@media (min-width: 768px) {
+  .card-set__item--shadow {
+    width: calc((100% - 2*30px)/2);
+  }
+}
+@media (min-width: 1200px) {
+  .card-set__item--shadow {
+    width: calc((100% - 3*30px)/3);
+  }
 }
 
 .card-set__icon {
@@ -800,7 +909,21 @@ svg {
 .image-set__item {
   margin: 15px;
   position: relative;
-  flex-basis: calc(50% - 30px);
+}
+@media (max-width: 767px) {
+  .image-set__item {
+    width: calc((100% - 2*30px)/2);
+  }
+}
+@media (min-width: 768px) {
+  .image-set__item {
+    width: calc((100% - 3*30px)/3);
+  }
+}
+@media (min-width: 1200px) {
+  .image-set__item {
+    width: calc((100% - 6*30px)/6);
+  }
 }
 
 .image-set__title {
@@ -828,6 +951,11 @@ svg {
   align-items: center;
   height: 92px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media (min-width: 1200px) {
+  .image-set__link {
+    width: 170px;
+  }
 }
 .image-set__link:hover {
   color: #2196F3;
