--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -1,12 +1,20 @@
 .card-set{
 	@extend %list;
-	// @include flex();
 	margin: -15px;
-    // flex-wrap: wrap;
+    @media (min-width:768px){
+        @include flex();
+        flex-wrap: wrap;
+    }
 	--light-font: #afb1b8;
 }
 .card-set__item{
 	margin: 15px;
+    @media (min-width:768px) {
+        @include col-width(2);
+    }
+    @media (min-width:1200px) {
+        @include col-width(4);
+    }
 }
 .card-set__item--shadow{
     &:hover,
@@ -15,9 +23,14 @@
         outline: none;
     }
 }
-// .card-set__item--fixed-width{
-    // width: calc(100% / 4 - 30px);
-// }
+.card-set__item--shadow{
+    @media (min-width:768px) {
+        @include col-width(2);
+    }
+    @media (min-width:1200px) {
+        @include col-width(3);
+    }
+}
 .card-set__icon{
 	background-color: $lightness-back;
 	border-radius: 4px;
