--- a/sass/components/header/_logo.scss
+++ b/sass/components/header/_logo.scss
@@ -7,10 +7,12 @@
 	color: $accent-color;
 	letter-spacing: calc(26px * 0.03);
 	display: inline-block;
-	// padding: 24px 0;
 	@media (max-width:480px) {
 		height: 100%;
 		@include flex(center);
+	}
+	@media (min-width:1200px){
+		padding: 24px 0;
 	}
 }
 
