--- a/sass/components/header/_navigation.scss
+++ b/sass/components/header/_navigation.scss
@@ -4,22 +4,32 @@
 	@include flex(center);
 	transition: color 250ms $time-func;
 	padding: 32px 0;
-	font-size: 40px;
 	&:hover,
 	&:active,
 	&:focus {
 		color: $accent-color;
 	}
+	@media (max-width:767px){
+		font-size: 40px;
+	}
 }
 
 .navigation {
 	margin: 0 auto;
+	@media (min-width:768px) {
+		margin-left: 88px;
+	}
+	@media (min-width:1200px) {
+		margin-left: 93px;
+	}
 }
 
 .navigation__list {
-	// @include flex(center);
 	@extend %list;
 	margin: 0 -25px;
+	@media (min-width:768px){
+		@include flex(center);
+	}
 }
 
 .navigation__item {
@@ -29,7 +39,7 @@
 
 .current {
 	color: $accent-color;
-	@media (min-width:481px) {
+	@media (min-width:768px) {
 		&::after {
 			content: '';
 			position: absolute;
@@ -45,12 +55,21 @@
 	
 }
 .menu{
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 2;
+	@media (max-width:767px){
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 2;
+		&.is-closed{
+			display: none;
+		}
+	}
+	@media (min-width:768px){
+		@include flex(center, space-between);
+		width: 100%;
+	}
 	background-color: $light-font;
 }
 .menu-toggle{
@@ -72,5 +91,8 @@
 	}
 	&.is-open .icon-cross {
 		display: block;
+	}
+	@media (min-width:768px) {
+		display: none;
 	}
 }
