--- a/css/main.css
+++ b/css/main.css
@@ -171,7 +171,7 @@ h1, h2, h3 {
 
 img {
   display: block;
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
@@ -181,7 +181,7 @@ svg {
   --color2: #2196F3;
 }
 
-.image-set, .filters, .card-set, .social, .navigation__list, .contacts {
+.image-set, .filters, .card-set, .social-links, .social, .navigation__list, .contacts {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -210,7 +210,12 @@ svg {
 }
 
 .section {
-  padding: 94px 0;
+  padding: 60px 0;
+}
+@media (min-width: 1200px) {
+  .section {
+    padding: 94px 0;
+  }
 }
 
 .section--zero-padding-bot {
@@ -228,7 +233,7 @@ svg {
   border-bottom: 1px solid #ececec;
   --contact-color:$contact-color;
 }
-@media (max-width: 480px) {
+@media (max-width: 767px) {
   .header {
     height: 60px;
   }
@@ -246,10 +251,17 @@ svg {
   justify-content: space-between;
 }
 
+@media (min-width: 768px) {
+  .footer__container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
 @media (min-width: 1200px) {
   .footer__container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
   }
 }
 
@@ -263,7 +275,7 @@ svg {
     max-width: 480px;
   }
 }
-@media (max-width: 1199px) {
+@media (min-width: 768px) {
   .container {
     width: 768px;
   }
@@ -277,6 +289,13 @@ svg {
 .contacts {
   margin: 0 -25px;
 }
+@media (max-width: 767px) {
+  .contacts {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 64px;
+  }
+}
 @media (min-width: 1200px) {
   .contacts {
     display: flex;
@@ -285,11 +304,28 @@ svg {
 }
 
 .contacts__link {
-  color: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts__link:hover, .contacts__link:active, .contacts__link:focus {
   color: #2196F3;
+}
+@media (max-width: 767px) {
+  .contacts__link {
+    font-size: 24px;
+  }
+  .header .contacts__item:nth-child(2) .contacts__link {
+    font-size: 34px;
+    line-height: 1.1705882353;
+    color: #2196F3;
+    padding-bottom: 32px;
+    display: block;
+  }
+}
+@media (min-width: 768px) {
+  .header .contacts__item:nth-child(2) .contacts__link {
+    margin-top: 10px;
+    display: block;
+  }
 }
 @media (min-width: 1200px) {
   .contacts__link {
@@ -304,6 +340,7 @@ svg {
 
 .contacts__item {
   margin: 0 25px;
+  color: #757575;
 }
 
 .contacts__adress {
@@ -329,6 +366,8 @@ svg {
 @media (min-width: 1200px) {
   .logo {
     padding: 24px 0;
+    font-size: 26px;
+    line-height: 1.1738461538;
   }
 }
 
@@ -353,11 +392,15 @@ svg {
 @media (max-width: 767px) {
   .navigation__link {
     font-size: 40px;
+    padding-top: 0;
+    padding-bottom: 16px;
   }
 }
 
-.navigation {
-  margin: 0 auto;
+@media (max-width: 767px) {
+  .navigation {
+    flex-grow: 1;
+  }
 }
 @media (min-width: 768px) {
   .navigation {
@@ -413,6 +456,10 @@ svg {
     width: 100%;
     height: 100%;
     z-index: 2;
+    padding: 48px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
   .menu.is-closed {
     display: none;
@@ -433,6 +480,7 @@ svg {
   border: none;
   background-color: inherit;
   color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-toggle.is-open {
   position: fixed;
@@ -453,6 +501,9 @@ svg {
     display: none;
   }
 }
+.menu-toggle:hover, .menu-toggle:active, .menu-toggle:focus {
+  color: #2196F3;
+}
 
 .footer {
   background-color: #2F303A;
@@ -461,12 +512,30 @@ svg {
   --light-font: #ffffff;
 }
 
-.footer__collumn {
-  margin-right: 70px;
-}
 @media (max-width: 767px) {
   .footer__collumn {
     text-align: center;
+    margin-bottom: 60px;
+  }
+}
+@media (min-width: 768px) {
+  .footer__collumn {
+    text-align: center;
+    padding: 0 76px;
+  }
+  .footer__collumn:nth-child(3) {
+    margin-top: 60px;
+  }
+}
+@media (min-width: 1200px) {
+  .footer__collumn {
+    margin-right: 70px;
+    text-align: left;
+    padding: 0 0;
+  }
+  .footer__collumn:nth-child(3) {
+    margin-top: 0;
+    margin-right: 0;
   }
 }
 
@@ -527,22 +596,56 @@ svg {
   outline: none;
 }
 
+.social-links {
+  display: flex;
+  font-size: 22px;
+  line-height: 0.8181818182;
+  color: #2196F3;
+  margin: 0 -10px;
+}
+@media (min-width: 768px) {
+  .social-links {
+    display: none;
+  }
+}
+
+.social-links__link {
+  padding: 0 10px;
+}
+
+li:not(:last-child) > .social-links__link {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
 .subscribe {
   margin-top: 14px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  justify-content: space-between;
+  width: 570px;
 }
 
 .subscribe__input {
   padding: 15px 16px;
-  border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
   color: rgba(255, 255, 255, 0.6);
-  width: 358px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+@media (min-width: 768px) {
+  .subscribe__input {
+    width: 450px;
+  }
+}
+@media (min-width: 1200px) {
+  .subscribe__input {
+    width: 358px;
+    margin-bottom: 0;
+  }
 }
 
 .subscribe__button {
@@ -562,28 +665,61 @@ svg {
 .hero {
   background-color: #2F303A;
   color: #ffffff;
-  padding: 200px 0;
+  padding: 118px 0;
   max-width: 1600px;
-  height: 600px;
+  max-height: 600px;
   text-align: center;
   margin: 0 auto;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/herooverlay.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-bg_sm.jpg);
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-bg_sm@2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-bg_md.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-bg_md@2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-bg_lg.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-bg_lg@2x.jpg);
+  }
 }
 
 .hero__heading {
   text-transform: uppercase;
   font-weight: 900;
-  font-size: 44px;
+  font-size: 26px;
   letter-spacing: 2.64px;
-  line-height: 1.3636363636;
+  line-height: 1.6153846154;
   margin-bottom: 30px;
+}
+@media (min-width: 1200px) {
+  .hero__heading {
+    font-size: 44px;
+    line-height: 1.3636363636;
+  }
 }
 
 .hero__button {
   color: inherit;
+  font-size: 16px;
 }
 
 .card-set {
@@ -650,8 +786,18 @@ svg {
 }
 
 .card-set__team-about {
-  padding: 30px 0;
+  padding: 24px 0;
   text-align: center;
+}
+@media (min-width: 768px) {
+  .card-set__team-about {
+    padding: 30px 0;
+  }
+}
+@media (min-width: 1200px) {
+  .card-set__team-about {
+    padding: 30px 0;
+  }
 }
 
 .card-set__worker-name {
@@ -664,6 +810,7 @@ svg {
 .card-set__profession {
   font-weight: 400;
   font-size: 16px;
+  line-height: 1.171875;
   color: #757575;
   margin-bottom: 16px;
 }
@@ -734,18 +881,28 @@ svg {
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media (max-width: 767px) {
+  .modal {
+    padding: 15px;
+  }
+}
 
 .modal__content {
   margin: auto;
   position: relative;
   width: 528px;
-  height: 581px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
+}
+@media (max-width: 1199px) {
+  .modal__content {
+    min-width: 320px;
+    max-width: 450px;
+  }
 }
 
 .modal__close {
@@ -771,6 +928,12 @@ svg {
   text-align: center;
   margin: 0;
   margin-bottom: 12px;
+}
+@media (max-width: 767px) {
+  .modal__title {
+    font-size: 20px;
+    line-height: 1.5;
+  }
 }
 
 .modal__filed {
@@ -851,6 +1014,12 @@ svg {
   line-height: 1.7142857143;
   cursor: pointer;
 }
+@media (max-width: 767px) {
+  .modal__checkbox-label {
+    font-size: 12px;
+    line-height: 1.1716666667;
+  }
+}
 
 .modal__link {
   color: #2196F3;
@@ -866,24 +1035,34 @@ svg {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 -4px;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  row-gap: 15px;
+  -moz-column-gap: 8px;
+       column-gap: 8px;
 }
-
-.filters__item {
-  margin: 0 4px;
+@media (max-width: 767px) {
+  .filters {
+    margin-bottom: 50px;
+    justify-content: flex-start;
+    max-width: 362px;
+  }
+}
+@media (min-width: 1200px) {
+  .filters {
+    margin-bottom: 34px;
+  }
 }
 
 .filters__button {
   background-color: #f5f4fa;
   font-weight: 500;
+  font-size: 16px;
   line-height: 1.625;
   border-radius: 5px;
   padding: 6px 22px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   border: none;
-  font-size: 16px;
   font-family: inherit;
 }
 .filters__button:hover, .filters__button:focus {
@@ -963,10 +1142,32 @@ svg {
   outline: none;
 }
 
+.image-set__item--col-3 {
+  width: calc((100% - 3*30px)/3);
+}
+
+@media (max-width: 1199px) {
+  .section--desktop {
+    display: none;
+  }
+}
+
 .heading {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.1719444444;
+  font-size: 28px;
+  line-height: 1.1714285714;
   text-align: center;
   margin-bottom: 50px;
+}
+@media (min-width: 768px) {
+  .heading {
+    font-size: 36px;
+    line-height: 1.1719444444;
+  }
+}
+@media (min-width: 1200px) {
+  .heading {
+    font-size: 36px;
+    line-height: 1.1719444444;
+  }
 }/*# sourceMappingURL=main.css.map */
