--- a/sass/components/header/_contacts.scss
+++ b/sass/components/header/_contacts.scss
@@ -1,17 +1,38 @@
 .contacts{
 	@extend %list;
 	margin: 0 -25px;
+	@media (max-width:767px) {
+		display: flex;
+		flex-direction: column-reverse;
+		margin-bottom: 64px;
+	}
 	@media (min-width:1200px){
 		@include flex(center);
 	}
 }
 .contacts__link{
 	@extend %link;
-	color: $contact-color;
+	
 	transition: color 250ms $time-func;
 	&:hover, &:active, &:focus {
 		color: $accent-color;
 	}
+		@media (max-width:767px) {
+			font-size: 24px;
+			.header .contacts__item:nth-child(2) & {
+					font-size: 34px;
+					line-height: calc(39.8 / 34);
+					color: $accent-color;
+					padding-bottom: 32px;
+					display: block;
+				}
+		}
+		@media (min-width:768px) {
+			.header .contacts__item:nth-child(2) & {
+				margin-top: 10px;
+				display: block;
+			}
+		}
 	@media (min-width:1200px){
 		@include flex(center);
 	}
@@ -21,6 +42,7 @@
 }
 .contacts__item {
 	margin: 0 25px;
+	color: $contact-color;
 }
 .contacts__adress {
 	color: $light-font;
