--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -49,8 +49,15 @@
 	color: $contact-color;
 }
 .card-set__team-about{
-	padding: 30px 0;
+	padding: 24px 0;
 	text-align: center;
+    @media (min-width:768px) {
+        padding: 30px 0;
+    }
+
+    @media (min-width:1200px) {
+        padding: 30px 0;
+    }
 }
 .card-set__worker-name{
 	line-height: calc(18.75/16);
@@ -61,6 +68,7 @@
 .card-set__profession{
 	font-weight: 400;
 	font-size: 16px;
+    line-height: calc(18.75/16);
 	color: $contact-color;
 	margin-bottom: 16px;
 }
