--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -1,23 +1,32 @@
 .filters{
 	@extend %list;
 	@include flex(center, center);
-	margin: 0 -4px;
-	margin-bottom: 50px;
+	flex-wrap: wrap;
+	row-gap: 15px;
+	column-gap: 8px;
+	@media (max-width:767px){
+		margin-bottom: 50px;
+		justify-content: flex-start;
+		max-width: 362px;
+	}
+	@media (min-width:1200px) {
+		margin-bottom: 34px;
+	}
 }
-.filters__item{
-	margin: 0 4px;
-}
+// .filters__item{
+// 	margin: 7px 4px;
+// }
 
 .filters__button{
 	background-color: $lightness-back;
 	font-weight: 500;
+	font-size: 16px;
 	line-height: calc(26/16);
 	border-radius: 5px;
 	padding: 6px 22px;
 	transition: background-color 250ms $time-func, color 250ms $time-func, box-shadow 250ms $time-func;
 	cursor: pointer;
 	border: none;
-	font-size: 16px;
 	font-family: inherit;
 	&:hover,&:focus{
 		background-color: $accent-color;
@@ -25,6 +34,7 @@
 		box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 		outline: none;
 	}
+	
 }
 
 .active {
