--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,9 +5,25 @@
 	--light-font: #ffffff;
 }
 .footer__collumn{
-	margin-right: 70px;
 	@media (max-width:767px) {
 		text-align: center;
+		margin-bottom: 60px;
+	}
+	@media (min-width:768px) {
+		text-align: center;
+		padding: 0 76px;
+		&:nth-child(3) {
+			margin-top: 60px;
+		}
+	}
+	@media (min-width:1200px) {
+		&:nth-child(3) {
+			margin-top: 0;
+			margin-right: 0;
+		}
+		margin-right: 70px;
+		text-align: left;
+		padding: 0 0;
 	}
 }
 
