--- a/sass/components/_heading.scss
+++ b/sass/components/_heading.scss
@@ -1,7 +1,16 @@
 .heading {
 	font-weight: 700;
-	font-size: 36px;
-	line-height: calc(42.19 / 36);
+	font-size: 28px;
+	line-height: calc(32.8 / 28);
 	text-align: center;
 	margin-bottom: 50px;
+	@media (min-width:768px) {
+		font-size: 36px;
+		line-height: calc(42.19 / 36);
+	}
+
+	@media (min-width:1200px) {
+		font-size: 36px;
+		line-height: calc(42.19 / 36);
+	}
 }
