--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -2,17 +2,27 @@
 	margin-top: 14px;
 	@include flex(0, center);
 	flex-wrap: wrap;
+	justify-content: space-between;
+	width: 570px;
 }
 
 .subscribe__input {
 	padding: 15px 16px;
-	border-radius: 4px;
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 	border-radius: 4px;
 	background-color: transparent;
 	color: $footer-link;
-	width: 358px;
+	width: 100%;
+	margin-bottom: 20px;
+	@media (min-width:768px) {
+		width: 450px;
+		
+	}
+	@media (min-width:1200px) {
+		width: 358px;
+		margin-bottom: 0;
+	}
 }
 
 .subscribe__button {
