--- a/sass/components/header/_navigation.scss
+++ b/sass/components/header/_navigation.scss
@@ -11,11 +11,16 @@
 	}
 	@media (max-width:767px){
 		font-size: 40px;
+		padding-top: 0;
+		padding-bottom: 16px;
 	}
 }
 
 .navigation {
-	margin: 0 auto;
+	
+	@media (max-width:767px) {
+		flex-grow: 1;
+	}
 	@media (min-width:768px) {
 		margin-left: 88px;
 	}
@@ -62,15 +67,21 @@
 		width: 100%;
 		height: 100%;
 		z-index: 2;
+		padding: 48px 40px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
 		&.is-closed{
 			display: none;
 		}
+		
 	}
 	@media (min-width:768px){
 		@include flex(center, space-between);
 		width: 100%;
 	}
 	background-color: $light-font;
+	
 }
 .menu-toggle{
 	z-index: 3;
@@ -78,6 +89,7 @@
 	border: none;
 	background-color: inherit;
 	color: $font-color;
+	transition: color 250ms $time-func;
 	&.is-open{
 		position: fixed;
 		top: 10px;
@@ -94,5 +106,10 @@
 	}
 	@media (min-width:768px) {
 		display: none;
+	}
+	&:hover,
+	&:active,
+	&:focus {
+		color: $accent-color;
 	}
 }
