--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -11,5 +11,6 @@ $footer-link:rgba(255, 255, 255, 0.6);
 $footer-soclink:rgba(255, 255, 255, 0.1);
 $icon-fill: #afb1b8;
 $time-func:cubic-bezier(0.4, 0, 0.2, 1);
-$logo-font:"Raleway",sans-serif;
+$logo-font: "Raleway",sans-serif;
 $main-font: "Roboto",sans-serif;
+$owerlay-gradient: linear-gradient(to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4));
