--- a/css/main.css
+++ b/css/main.css
@@ -399,7 +399,7 @@ svg {
 
 @media (max-width: 767px) {
   .navigation {
-    flex-grow: 1;
+    height: calc(100% - 183px);
   }
 }
 @media (min-width: 768px) {
@@ -456,7 +456,7 @@ svg {
     width: 100%;
     height: 100%;
     z-index: 2;
-    padding: 48px 40px;
+    padding-left: 48px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
