--- a/sass/components/header/_navigation.scss
+++ b/sass/components/header/_navigation.scss
@@ -19,7 +19,7 @@
 .navigation {
 	
 	@media (max-width:767px) {
-		flex-grow: 1;
+		height: calc(100% - 183px);
 	}
 	@media (min-width:768px) {
 		margin-left: 88px;
@@ -67,7 +67,7 @@
 		width: 100%;
 		height: 100%;
 		z-index: 2;
-		padding: 48px 40px;
+		padding-left: 48px;
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
