--- a/sass/components/_heading.scss
+++ b/sass/components/_heading.scss
@@ -4,12 +4,12 @@
 	line-height: calc(32.8 / 28);
 	text-align: center;
 	margin-bottom: 50px;
-	@media (min-width:768px) {
+	@media screen and (min-width:768px) {
 		font-size: 36px;
 		line-height: calc(42.19 / 36);
 	}
 
-	@media (min-width:1200px) {
+	@media screen and (min-width:1200px) {
 		font-size: 36px;
 		line-height: calc(42.19 / 36);
 	}
