--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -4,18 +4,16 @@
 	flex-wrap: wrap;
 	row-gap: 15px;
 	column-gap: 8px;
-	@media (max-width:767px){
+	@media screen and (max-width:767px){
 		margin-bottom: 50px;
 		justify-content: flex-start;
 		max-width: 362px;
 	}
-	@media (min-width:768px) {
+	@media screen and (min-width:768px) {
 		margin-bottom: 34px;
 	}
 }
-// .filters__item{
-// 	margin: 7px 4px;
-// }
+
 
 .filters__button{
 	background-color: $lightness-back;
