--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,18 +5,18 @@
 	--light-font: #ffffff;
 }
 .footer__collumn{
-	@media (max-width:767px) {
+	@media screen and (max-width:767px) {
 		text-align: center;
 		margin-bottom: 60px;
 	}
-	@media (min-width:768px) {
+	@media screen and (min-width:768px) {
 		text-align: center;
 		padding: 0 76px;
 		&:nth-child(3) {
 			margin-top: 60px;
 		}
 	}
-	@media (min-width:1200px) {
+	@media screen and (min-width:1200px) {
 		&:nth-child(3) {
 			margin-top: 0;
 			margin-right: 0;
