--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -46,7 +46,7 @@
 	letter-spacing: calc(44px * 0.06);
 	line-height: calc(42 / 26);
 	margin-bottom: 30px;
-	@media (min-width:1200px) {
+	@media screen and (min-width:1200px) {
 		font-size: 44px;
 		line-height: calc(60 / 44);
 	}
