--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -31,7 +31,7 @@
 	line-height: calc(22 / 18);
 	color: $accent-color;
 	margin: 0 -10px;
-	@media (min-width:768px) {
+	@media screen and (min-width:768px) {
 		display: none;
 	}
 }
