--- a/sass/components/header/_contacts.scss
+++ b/sass/components/header/_contacts.scss
@@ -1,12 +1,12 @@
 .contacts{
 	@extend %list;
 	margin: 0 -25px;
-	@media (max-width:767px) {
+	@media screen and (max-width:767px) {
 		display: flex;
 		flex-direction: column-reverse;
 		margin-bottom: 64px;
 	}
-	@media (min-width:1200px){
+	@media screen and (min-width:1200px){
 		@include flex(center);
 	}
 }
@@ -17,7 +17,7 @@
 	&:hover, &:active, &:focus {
 		color: $accent-color;
 	}
-		@media (max-width:767px) {
+		@media screen and (max-width:767px) {
 			.header &{
 				font-size: 24px;
 			}
@@ -29,13 +29,18 @@
 					display: block;
 				}
 		}
-		@media (min-width:768px) {
+		@media screen and (min-width:768px) {
 			.header .contacts__item:nth-child(2) & {
 				margin-top: 10px;
 				display: block;
 			}
 		}
-	@media (min-width:1200px){
+		@media screen and (min-width:1200px) {
+			.header .contacts__item:nth-child(2) & {
+				margin-top: 0;
+			}
+		}
+	@media screen and (min-width:1200px){
 		@include flex(center);
 	}
 }
