--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -75,7 +75,7 @@ svg {
 }
 .section{
 	padding: 60px 0;
-	@media (min-width:1200px) {
+	@media screen and (min-width:1200px) {
 		padding: 94px 0;
 	}
 
